cluster/argocd/overlays/production/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: argocd-ingress-gateway
  namespace: argocd
spec:
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - argo.aksnp.diehlabs.com # This should match a DNS name in the Certificate
