cluster/argocd/overlays/production/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argo-cd-https
  namespace: argocd
spec:
  hosts:
  - argo.aksnp.diehlabs.com
